# crbmnl

./: .gitignore  Cargo.toml  README.md  flake.nix  result
src/: calendar.rs  config.rs  lib.rs  main.rs  temperature.rs
