[package]
name = "crbmnl"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.32"
actix-files = "0.6.6"
actix-web = "4.11.0"
base64 = "0.22.1"
image = "0.25.9"
imageproc = "0.26.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
