[package]
name = "crbmnl"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.32"
actix-files = "0.6.6"
actix-web = "4.11.0"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
image = "0.25.9"
imageproc = "0.26.0"
itertools = "0.14.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
